--- a/codereview.settings
+++ b/codereview.settings
@@ -6,3 +6,5 @@ TRY_ON_UPLOAD: True
 TRYSERVER_HTTP_HOST: chrome-tryserver.corp.google.com
 TRYSERVER_HTTP_PORT: 8023
 TRYSERVER_PROJECT: gyp
+TRYSERVER_PATCHLEVEL: 1
+TRYSERVER_ROOT: trunk
